--- a/src/components/contact/ContactForm.css
+++ b/src/components/contact/ContactForm.css
@@ -40,9 +40,6 @@
       fadeInUp 1s ease-in-out forwards 0.1s,
       moveY 2s ease-in-out infinite;
   }
-  .bd-button-text{
-    color: black !important;
-  }
   .span{
     display:block;
     color:#CC3423;
